manifests/deployment-1.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "democluster111-e874"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "democluster111-e874"
  template:
    metadata:
      labels:
        app: "democluster111-e874"
    spec:
      containers:
        - name: "democluster111-e874"
          image: "clusterabandonmentregistry.azurecr.io/democluster111"
          ports:
          - containerPort: 80
