manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goecho
  labels:
    app: goecho
spec:
  replicas: 1
  selector:
    matchLabels:
      app: goecho
  template:
    metadata:
      labels:
        app: goecho
    spec:
      containers:
        - name: nginx2
          image: manifesttest01acr.azurecr.io/manifestimage11
          ports:
            - containerPort: 1323
